Names and jobtitles on employeecard didnt wrap correctly.
Fixed by adding width to p and h4. Also fixed grid column width

--- a/src/components/employeesCard/EmployeeCard.module.scss
+++ b/src/components/employeesCard/EmployeeCard.module.scss
@@ -4,7 +4,7 @@
   background-color: $white;
   border-radius: $S;
   display: grid;
-  grid-template-columns: 100px 192px;
+  grid-template-columns: 100px 208px;
   grid-template-rows: 50% 50%;
   height: 300px;
   width: 358px;
@@ -89,6 +89,7 @@
     p {
       text-align: left;
       margin-left: 15px;
+      width: calc(100% - 15px);
     }
   }
 
@@ -111,7 +112,7 @@
 @media (max-width: 690px) {
   .employeeCard {
     width: 358px;
-    grid-template-columns: 100px 192px;
+    grid-template-columns: 100px 208px;
   }
 }
 
