--- a/src/templates/aboutPage/aboutPage.module.scss
+++ b/src/templates/aboutPage/aboutPage.module.scss
@@ -248,7 +248,7 @@
     .aboutEmployees {
       .employeeWrapper,
       .internsWrapper {
-        max-width: 375px;
+        max-width: 390px;
 
         .quoteWrapper {
           display: none;
